# bluetooth

./: BUGFIX_SUMMARY.md  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  bluetooth_on.sh  demo.sh
angry-birds-game/: README.md  index.html  script.js  style.css
include/: advertisement_manager.h  bluez_interface.h  gatt_application.h  gatt_characteristic.h  gatt_service.h
src/: advertisement_manager.cpp  bluetooth_fixed.cpp  bluetooth_minimal.cpp  bluetooth_server_simple.cpp  bluetooth_test.cpp  bluez_interface.cpp  gatt_application.cpp  gatt_characteristic.cpp  gatt_service.cpp  main.cpp
